--- a/src/main/webapp/analytics.html
+++ b/src/main/webapp/analytics.html
@@ -20,7 +20,9 @@
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="libs/bootstrap-table-1.6.1/bootstrap-table.min.css"  rel="stylesheet">
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
-    <link href="css/font-awesome.min.css"  rel="stylesheet">    
+    <link href="css/font-awesome.min.css"  rel="stylesheet">        
+
+    <link href="libs/jquery-bootgrid/dist/jquery.bootgrid.min.css"  rel="stylesheet">
 
     <link href="css/wr8.css"  rel="stylesheet">    
     <!-- InstanceBeginEditable name="head" -->
@@ -77,11 +79,12 @@
 	<script src='libs/jquery-validation/jquery.validate.1.13.1.min.js'></script>    
 
     <script src='libs/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js'></script>
-        <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
+    <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
     <script src='libs/bootstrap-table-1.6.1/bootstrap-table.min.js'></script>
     <script src='libs/bootbox/bootbox.4.3.0.min.js'></script>
 	<script src='libs/knockout/knockout-3.2.0.min.js'></script>
-    
+   	<script src='libs/jquery-bootgrid/dist/jquery.bootgrid.min.js'></script>
+
    	<script src='libs/jasny-bootstrap/js/jasny-bootstrap.min.js'></script>
 	<script src='js/wr8.js'></script>
 
