--- a/src/main/webapp/company-complex.html
+++ b/src/main/webapp/company-complex.html
@@ -20,7 +20,9 @@
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="libs/bootstrap-table-1.6.1/bootstrap-table.min.css"  rel="stylesheet">
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
-    <link href="css/font-awesome.min.css"  rel="stylesheet">    
+    <link href="css/font-awesome.min.css"  rel="stylesheet">        
+
+    <link href="libs/jquery-bootgrid/dist/jquery.bootgrid.min.css"  rel="stylesheet">
 
     <link href="css/wr8.css"  rel="stylesheet">    
     <!-- InstanceBeginEditable name="head" -->
@@ -122,29 +124,29 @@
 		    <div class="panel-heading">Complexes</div>
 			<div class="panel-body">
 				<div class="table-responsive">
-					<table class="table table-striped table-hover">
+					<table class="wr8-table table table-striped table-hover">
 						<thead>
 							<tr>
-								<th width="5%">#</th>
-								<th width="18%">Complex Name</th>
-								<th width="18%">Address</th>
-								<th width="18%">City</th>
-								<th width="18%">State</th>
-								<th width="18%">Zip</th>
-								<th width="18%">Phone</th>
-								<th width="18%">Email</th>
-								<th width="18%">Building Count</th>
-								<th width="18%">Construction Type</th>
-								<th width="18%">Floor Type</th>
-								<th width="18%">Lot Size</th>
-								<th width="18%">Floors</th>
-								<th width="18%">Notes</th>
-																
+							    <th data-column-id='id'  data-visible="false">ID</th>
+								<th data-column-id='0' width="5%">#</th>
+								<th data-column-id='1' width="18%">Complex Name</th>
+								<th data-column-id='2' width="18%">Address</th>
+								<th data-column-id='3' width="18%">City</th>
+								<th data-column-id='4' width="18%">State</th>
+								<th data-column-id='5' width="18%">Zip</th>
+								<th data-column-id='6' width="18%">Phone</th>
+								<th data-column-id='7' width="18%">Email</th>
+								<th data-column-id='8' width="18%">Building Count</th>
+								<th data-column-id='9' width="18%">Construction Type</th>
+								<th data-column-id='10' width="18%">Floor Type</th>
+								<th data-column-id='11' width="18%">Lot Size</th>
+								<th data-column-id='12' width="18%">Floors</th>
+								<th data-column-id='13' width="18%">Notes</th>
 						</thead>
 						<tbody data-bind="template: {foreach: complexes,  as: 'complex'}"
 							class="rowlink">
 							<tr data-bind="click: $root.rowClicked">
-								<td data-bind='text: complex.id'></td>
+								<td data-visible='false' data-bind='text: complex.id'></td>
 								<td data-bind="text: complex.complexName"></td>
 								<td data-bind="text: complex.address"></td>
 								<td data-bind="text: complex.city"></td>
@@ -300,11 +302,12 @@
 	<script src='libs/jquery-validation/jquery.validate.1.13.1.min.js'></script>    
 
     <script src='libs/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js'></script>
-        <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
+    <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
     <script src='libs/bootstrap-table-1.6.1/bootstrap-table.min.js'></script>
     <script src='libs/bootbox/bootbox.4.3.0.min.js'></script>
 	<script src='libs/knockout/knockout-3.2.0.min.js'></script>
-    
+   	<script src='libs/jquery-bootgrid/dist/jquery.bootgrid.min.js'></script>
+
    	<script src='libs/jasny-bootstrap/js/jasny-bootstrap.min.js'></script>
 	<script src='js/wr8.js'></script>
 
