--- a/src/main/webapp/company-unit.html
+++ b/src/main/webapp/company-unit.html
@@ -20,7 +20,9 @@
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="libs/bootstrap-table-1.6.1/bootstrap-table.min.css"  rel="stylesheet">
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
-    <link href="css/font-awesome.min.css"  rel="stylesheet">    
+    <link href="css/font-awesome.min.css"  rel="stylesheet">        
+
+    <link href="libs/jquery-bootgrid/dist/jquery.bootgrid.min.css"  rel="stylesheet">
 
     <link href="css/wr8.css"  rel="stylesheet">    
     <!-- InstanceBeginEditable name="head" -->
@@ -217,19 +219,20 @@
 		    <div class='panel-heading'>Units</div>
 			<div class="panel-body">
 				<div class="table-responsive">
-					<table class="table table-striped table-hover">
+					<table class="wr8-table table table-striped table-hover table-condensed bootgrid-table">
 						<thead>
 							<tr>
-								<th width="25%">Unit Number</th>
-								<th width="25%">Event Count</th>
-								<th width="25%">Sensor Last Event</th>
-								<th width="25%">Last Repeater Seq</th>
+							    <th data-column-id='id' width="25%">ID</th>
+								<th data-column-id='unit' width="25%">Unit Number</th>
+								<th data-column-id='eventCount' width="25%">Event Count</th>
+								<th data-column-id='lastEvent' width="25%">Sensor Last Event</th>
+								<th data-column-id='lastRep' width="25%">Last Repeater Seq</th>
 							</tr>
-																
 						</thead>
 						<tbody data-bind="template: {foreach: units,  as: 'unit'}"
 							class="rowlink">
-							<tr data-bind="click: $root.rowClicked">
+							<tr data-bind="{click: $root.rowClicked}">
+                                <td data-bind="text: unit.id"></td>                                							
 								<td data-bind="text: unit.unitNumber"></td>
                                 <td data-bind="text: unit.eventCount"></td>
                                 <td data-bind="text: unit.lastEvent"></td>
@@ -305,11 +308,12 @@
 	<script src='libs/jquery-validation/jquery.validate.1.13.1.min.js'></script>    
 
     <script src='libs/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js'></script>
-        <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
+    <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
     <script src='libs/bootstrap-table-1.6.1/bootstrap-table.min.js'></script>
     <script src='libs/bootbox/bootbox.4.3.0.min.js'></script>
 	<script src='libs/knockout/knockout-3.2.0.min.js'></script>
-    
+   	<script src='libs/jquery-bootgrid/dist/jquery.bootgrid.min.js'></script>
+
    	<script src='libs/jasny-bootstrap/js/jasny-bootstrap.min.js'></script>
 	<script src='js/wr8.js'></script>
 
