--- a/src/main/webapp/sensor-events.html
+++ b/src/main/webapp/sensor-events.html
@@ -20,7 +20,9 @@
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="libs/bootstrap-table-1.6.1/bootstrap-table.min.css"  rel="stylesheet">
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
-    <link href="css/font-awesome.min.css"  rel="stylesheet">    
+    <link href="css/font-awesome.min.css"  rel="stylesheet">        
+
+    <link href="libs/jquery-bootgrid/dist/jquery.bootgrid.min.css"  rel="stylesheet">
 
     <link href="css/wr8.css"  rel="stylesheet">    
     <!-- InstanceBeginEditable name="head" -->
@@ -118,12 +120,12 @@
 		    <div class='panel-heading'>100 Most Recent Events for src <b data-bind='text: sensor.sensorHex'></b></div>
 			<div class="panel-body">
 				<div class="table-responsive">
-					<table class="table table-striped table-hover">
+					<table class="wr8-table table table-striped table-hover">
 	                     <thead>
 							<tr>
-							    <th width="25%">Sequence</th>
-							    <th width="20%">Duration</th>
-								<th width="30%">Time</th>
+							    <th data-column-id='seq' width="25%">Sequence</th>
+							    <th data-column-id='dur' width="20%">Duration</th>
+								<th data-column-id='time' width="30%">Time</th>
 						    </tr>
 						</thead>
 						<tbody data-bind="template: {foreach: events,  as: 'e'}"
@@ -183,11 +185,12 @@
 	<script src='libs/jquery-validation/jquery.validate.1.13.1.min.js'></script>    
 
     <script src='libs/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js'></script>
-        <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
+    <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
     <script src='libs/bootstrap-table-1.6.1/bootstrap-table.min.js'></script>
     <script src='libs/bootbox/bootbox.4.3.0.min.js'></script>
 	<script src='libs/knockout/knockout-3.2.0.min.js'></script>
-    
+   	<script src='libs/jquery-bootgrid/dist/jquery.bootgrid.min.js'></script>
+
    	<script src='libs/jasny-bootstrap/js/jasny-bootstrap.min.js'></script>
 	<script src='js/wr8.js'></script>
 
