--- a/src/main/webapp/unit-sensor.html
+++ b/src/main/webapp/unit-sensor.html
@@ -20,7 +20,9 @@
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
     <link href="libs/bootstrap-table-1.6.1/bootstrap-table.min.css"  rel="stylesheet">
     <link href="libs/jasny-bootstrap/css/jasny-bootstrap.min.css"  rel="stylesheet">    
-    <link href="css/font-awesome.min.css"  rel="stylesheet">    
+    <link href="css/font-awesome.min.css"  rel="stylesheet">        
+
+    <link href="libs/jquery-bootgrid/dist/jquery.bootgrid.min.css"  rel="stylesheet">
 
     <link href="css/wr8.css"  rel="stylesheet">    
     <!-- InstanceBeginEditable name="head" -->
@@ -70,6 +72,7 @@
     <div class='notifications top-right'></div>
     <div class="container">
       <!-- InstanceBeginEditable name="MainBody" -->
+
 		<h1 class="page-header">
 		    <span class='small'>Unit</span>
 		    <span data-bind='text: unit.unitNumber'></span>
@@ -136,18 +139,22 @@
 		    <div class='panel-heading'>Devices</div>
 			<div class="panel-body">
 				<div class="table-responsive">
-					<table class="table table-striped table-hover">
+					<table class="wr8-table table table-striped table-hover table-condensed bootgrid-table">
 						<thead>
 							<tr>
-								<th width="18%">Role</th>
-								<th width="18%">Serial Number</th>
-                                <th width="18%">Total Events</th>
-                                <th width="18%">Last Event</th>								
+							    <th data-visible="false" data-column-id="id" width="18%">id</th>							
+							    <th data-visible="false" data-column-id="roleId" width="18%">RoleId</th>
+								<th data-column-id="role" width="18%">Role</th>
+								<th data-column-id="sn" data-type='numeric' width="18%">Serial Number</th>
+                                <th data-column-id="te" data-type='numeric' width="18%">Total Events</th>
+                                <th data-column-id="le"  width="18%">Last Event</th>								
 						    </tr>
 						</thead>
 						<tbody data-bind="template: {foreach: sensors,  as: 's'}"
 							class="rowlink">
 							<tr data-bind="{click: $root.rowClicked}">
+                                <td data-visible="false" data-bind="text: s.id"></td>
+								<td data-visible="false" data-bind="text: s.role"></td>
 		                        <td data-bind="text: s.roleLabel"></td>
 								<td data-bind="text: s.sensor"></td>
                                 <td data-bind="text: s.eventCount"></td>
@@ -205,17 +212,16 @@
 	<script src='libs/jquery-validation/jquery.validate.1.13.1.min.js'></script>    
 
     <script src='libs/bootstrap/bootstrap-3.3.2-dist/js/bootstrap.min.js'></script>
-        <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
+    <script src='libs/bootstrap-notify/bootstrap-notify.js'></script>
     <script src='libs/bootstrap-table-1.6.1/bootstrap-table.min.js'></script>
     <script src='libs/bootbox/bootbox.4.3.0.min.js'></script>
 	<script src='libs/knockout/knockout-3.2.0.min.js'></script>
-    
+   	<script src='libs/jquery-bootgrid/dist/jquery.bootgrid.min.js'></script>
+
    	<script src='libs/jasny-bootstrap/js/jasny-bootstrap.min.js'></script>
 	<script src='js/wr8.js'></script>
 
-    <!--
    	<script src='../js/live.js'></script>
-    -->
     <script src='js/json-io-utils.js'></script>	
 
 	<script src='libs/springy/springy.js'></script>
